--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <script src="./dependencies/react-dom.js"></script>
     <script src="./dependencies/babel.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./main.css">
-    <script type="text/babel" src="./app.js"></script>
+    <script type="text/babel" src="./app.jsx"></script>
   </head>
   <body>
     <div id="main">
-      
+
     </div>
   </body>
 </html>
